--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "multer": "^2.0.0",
+    "node-cron": "^4.0.6",
+    "path": "^0.12.7",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
