--- a/server/middleware/settings.json
+++ b/server/middleware/settings.json
@@ -1,5 +1,7 @@
 {
   "wantsNotifications": true,
   "requestCount": 5,
-  "resetTime": 1749061110865
+  "resetTime": 1749061110865,
+  "logo": "logo.png",
+  "name": "חסד בנימין"
 }
