--- a/package.json
+++ b/package.json
@@ -2,30 +2,8 @@
   "name": "gmach",
   "version": "1.0.0",
   "private": true,
-  "description": "מערכת ניהול גמ\"ח Desktop App מבוסס Electron",
-  "author": "שמך <email@example.com>",
-  "homepage": "./",
-  "main": "main.js",
   "scripts": {
-    "build-client": "cd client && npm run build",
-    "electron-dev": "electron .",
-    "electron-rebuild": "electron-rebuild",
-    "electron-pack": "npm run build-client && npm run electron-rebuild && electron-builder",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "http-server": "^14.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
-    "multer": "^2.0.0",
-    "node-cron": "^4.0.6",
-    "nodemailer": "^7.0.5",
-    "os": "^0.1.2",
-    "sequelize": "^6.37.7",
-    "sharp": "^0.34.3",
-    "sqlite3": "^5.1.7"
+    "secure-start": "concurrently \"node -r ./server/load-encrypted-env.js ./server/api.js\" \"cd client && npm start\""
   },
   "devDependencies": {
     "electron": "^37.3.1",
@@ -33,53 +11,8 @@
     "electron-devtools-installer": "^3.2.0",
     "electron-rebuild": "^3.2.9"
   },
-  "build": {
-    "appId": "com.gmach.desktop",
-    "productName": "GmachApp",
-    "electronVersion": "37.3.1",
-
-    "files": [
-      "client/build/**/*",
-      "server/**/*",
-      "server/models/data/gmach.sqlite",
-      "server/models/data/gmach.sqlite.enc",
-      "main.js",
-      "preload.js",
-      "package.json",
-      "uploads/**/*"
-    ],
-
-    "extraResources": [
-      {
-        "from": "server/models/data/gmach.sqlite.enc",
-        "to": "server/models/data/gmach.sqlite.enc"
-      },
-      {
-        "from": "server/env.enc",
-        "to": "env.enc"
-      }
-    ],
-
-    "directories": {
-      "buildResources": "assets"
-    },
-
-    "win": {
-      "icon": "assets/icon.png",
-      "target": [
-        {
-          "target": "nsis",
-          "arch": ["x64"]
-        }
-      ]
-    },
-
-    "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
-    }
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3"
   }
 }
