--- a/server/middleware/settings.json
+++ b/server/middleware/settings.json
@@ -2,6 +2,6 @@
   "wantsNotifications": false,
   "requestCount": 5,
   "resetTime": 1749061110865,
-  "logo": "logo.png",
-  "name": "אמת ליעקב"
+  "logo": "",
+  "name": ""
 }
